k8s/infrastructure/base/network/cilium/gateway/route-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  labels:
    gateway-access: internal
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'argocd.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: argocd-server
          port: 443
          filters:
            - type: RequestRedirect
              requestRedirect:
                scheme: https
