k8s/infrastructure/base/network/cilium/gateway/route-arr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
  labels:
    gateway-access: internal
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'lidarr.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Real-IP
                value: ${remote_addr}
      backendRefs:
        - name: lidarr
          port: 8686
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  labels:
    gateway-access: internal
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'prowlarr.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Real-IP
                value: ${remote_addr}
      backendRefs:
        - name: prowlarr
          port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'radarr.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'sonarr.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 8989
