k8s/infrastructure/base/network/cilium/gateway/route-jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  labels:
    gateway-access: external
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - 'jellyfin.external.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Real-IP
                value: ${remote_addr}
      backendRefs:
        - name: jellyfin
          port: 8096
          filters:
            - type: URLRewrite
              urlRewrite:
                path:
                  type: ReplaceFullPath
                  replaceFullPath: /
